--- a/workspaces/admin/package.json
+++ b/workspaces/admin/package.json
@@ -16,6 +16,7 @@
     "ky": "1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use": "17.5.0",
     "regexparam": "3.0.0",
     "underscore": "1.13.6",
     "unicode-collation-algorithm2": "0.5.0",
