--- a/workspaces/server/package.json
+++ b/workspaces/server/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.18.0",
     "styled-components": "6.1.1",
+    "wanakana": "5.3.1",
     "zod": "3.22.4"
   },
   "devDependencies": {
